<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>fct_comp_2</class>
 <widget class="QDialog" name="fct_comp_2">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>200</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Gerer les representation</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>dateRep</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="L_dateRep"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>noSpec</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="L_noSpec"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>promoRep</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="L_promoRep"/>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLabel" name="text">
     <property name="text">
      <string/>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_4">
     <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
        <string>Ajouter</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="delete_2">
       <property name="text">
        <string>Delete</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>pushButton</sender>
   <signal>clicked()</signal>
   <receiver>fct_comp_2</receiver>
   <slot>ajouter()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>246</x>
     <y>185</y>
    </hint>
    <hint type="destinationlabel">
     <x>549</x>
     <y>356</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>delete_2</sender>
   <signal>clicked()</signal>
   <receiver>fct_comp_2</receiver>
   <slot>delete()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>358</x>
     <y>171</y>
    </hint>
    <hint type="destinationlabel">
     <x>387</x>
     <y>153</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>refreshResult()</slot>
  <slot>ajouter()</slot>
  <slot>delete()</slot>
 </slots>
</ui>
